# hs-cam-filter

./: LICENSE  haskell-exchange-y2016.cabal  hs-cam-filter.cabal  stack.yaml
src/: Main.hs  Utils.hs
