name:                hs-cam-filter
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/bitonic/hs-cam-filter#readme
license:             BSD3
license-file:        LICENSE
author:              Francesco Mazzoli
maintainer:          f@mazzo.li
copyright:           (c) 2015 Francesco Mazzoli
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable hs-cam-filter
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-incomplete-patterns -threaded -rtsopts -O2
  if os(darwin)
   ghc-Options: -pgml g++ "-optl-Wl,-lfltkc"
  if !os(darwin) && !os(windows)
    ghc-Options: -pgml g++ "-optl-Wl,--whole-archive" "-optl-Wl,-Bstatic" "-optl-Wl,-lfltkc" "-optl-Wl,-Bdynamic" "-optl-Wl,--no-whole-archive"
  build-depends:       base >= 4.7 && < 5
                     , fltkhs
                     , opencv
                     , optparse-applicative
                     , linear
                     , bytestring
                     , primitive